--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -1,13 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  first_unity: 
-  second_unity: 
-  third_unity: 
-  status: MyString
+  first_unity: '3.0'
+  second_unity: '3.0'
+  third_unity: '3.0'
 
 two:
-  first_unity: 
-  second_unity: 
-  third_unity: 
-  status: MyString
+  first_unity: '3.0'
+  second_unity: '3.0'
+  third_unity: '3.0'
